# IES2608-NordicSemiconductor

./: .gitignore  LICENSE  README.md  west.yml
Firmware/: README.md
Firmware/GNSS/src/: main.c
Firmware/LTE/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
Firmware/LTE/src/: main.c
Firmware/NTN/: serial_modem_v0.3.0_nrf9151dk_ppp_cmux_mtrace.hex
Useful Commands/: commands.txt
app/: CMakeLists.txt  README.md  prj.conf  thingy91x_nrf9160_ns.overlay
app/src/: main.c
app/src/modules/hello/: CMakeLists.txt  hello.h
app/src/modules/world/: CMakeLists.txt  world.c  world.h
docs/: NTN_DEPLOYMENT_GUIDE.md
docs/Useful Commands/: NTN_Modem_Commands.txt  commands.txt
scripts/: README.md
tests/: README.md
tests/on_target/: NTN_TESTING.md  README.md  environment.yml  ntn_modem_commands.py  ntn_test.py
tests/on_target/ppk/: automated_ppk.py
